--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -16,6 +16,7 @@ default = []
 
 # Web framework integrations
 actix-web = ["actix-web-dep", "futures-util"]
+actix-web-4 = ["actix-web-4-dep"]
 
 [dependencies]
 maud_htmlescape = { version = "0.17.0", path = "../maud_htmlescape" }
@@ -24,6 +25,7 @@ iron = { version = ">= 0.5.1, < 0.7.0", optional = true }
 rocket = { version = ">= 0.3, < 0.5", optional = true }
 futures-util = { version = "0.3.0", optional = true, default-features = false }
 actix-web-dep = { package = "actix-web", version = ">= 2, < 4", optional = true, default-features = false }
+actix-web-4-dep = { package = "actix-web", version = ">= 4.0.0-beta.1, < 5", optional = true, default-features = false }
 
 [dev-dependencies]
 trybuild = { version = "1.0.33", features = ["diff"] }
