--- a/doctest/Cargo.toml
+++ b/doctest/Cargo.toml
@@ -12,6 +12,7 @@ maud = { path = "../maud", features = ["actix-web", "iron", "rocket"] }
 pulldown-cmark = "0.8"
 rocket = "0.4"
 rouille = "3"
+tide = "0.16"
 
 [lib]
 path = "lib.rs"
