--- a/doctest/Cargo.toml
+++ b/doctest/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2018"
 [dependencies]
 actix-web = "3"
 ammonia = "3"
+async-std = "1"
 iron = "0.6"
-maud = { path = "../maud", features = ["actix-web", "iron", "rocket"] }
+maud = { path = "../maud", features = ["actix-web", "iron", "rocket", "tide"] }
 pulldown-cmark = "0.8"
 rocket = "0.4"
 rouille = "3"
