provide async_std attributes feature

--- a/doctest/Cargo.toml
+++ b/doctest/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 actix-web = "3"
 ammonia = "3"
-async-std = "1"
+async-std = {version = "1.9.0", features = ["attributes"]}
 iron = "0.6"
 maud = { path = "../maud", features = ["actix-web", "iron", "rocket", "tide"] }
 pulldown-cmark = "0.8"
