--- a/doctest/Cargo.toml
+++ b/doctest/Cargo.toml
@@ -7,13 +7,16 @@ edition = "2018"
 [dependencies]
 actix-web = "3"
 ammonia = "3"
-async-std = {version = "1.9.0", features = ["attributes"]}
 iron = "0.6"
 maud = { path = "../maud", features = ["actix-web", "iron", "rocket", "tide"] }
 pulldown-cmark = "0.8"
 rocket = "0.4"
 rouille = "3"
 tide = "0.16"
+
+[dependencies.async-std]
+version = "1.9.0"
+features = ["attributes"]
 
 [lib]
 path = "lib.rs"
