--- a/doctest/Cargo.toml
+++ b/doctest/Cargo.toml
@@ -8,11 +8,13 @@ edition = "2018"
 actix-web = "3"
 ammonia = "3"
 iron = "0.6"
-maud = { path = "../maud", features = ["actix-web", "iron", "rocket", "tide"] }
+maud = { path = "../maud", features = ["actix-web", "iron", "rocket", "tide", "axum"] }
 pulldown-cmark = "0.8"
 rocket = "0.4"
 rouille = "3"
 tide = "0.16"
+tokio = { version = "1.9.0", features = ["rt", "macros", "rt-multi-thread"] }
+axum = "0.1.3"
 
 [dependencies.async-std]
 version = "1.9.0"
