Use \033 instead of \e in Makefile
macOS has an old version of `printf` that only supports octal escapes.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -15,7 +15,7 @@ md_files := $(foreach slug,$(slugs),$(call slug_to_md,$(slug)))
 html_files := $(foreach slug,$(slugs),$(call slug_to_html,$(slug)))
 slugs_and_md_files := $(foreach slug,$(slugs),$(slug):$(call slug_to_md,$(slug)))
 
-print_status = @ printf ' \e[1;35m♦ %s\e[0m\n' '$(1)'
+print_status = @ printf ' \033[1;35m♦ %s\033[0m\n' '$(1)'
 
 .PHONY: all
 all: $(html_files) site/styles.css
