--- a/doctest/Cargo.toml
+++ b/doctest/Cargo.toml
@@ -5,16 +5,16 @@ authors = ["Chris Wong <lambda.fairy@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-actix-web = "3"
+actix-web = { version = "3", default-features = false }
 ammonia = "3"
 iron = "0.6"
 maud = { path = "../maud", features = ["actix-web", "iron", "rocket", "tide", "axum"] }
 pulldown-cmark = "0.8"
-rocket = "0.4"
+rocket = { version = "0.4", default-features = false }
 rouille = "3"
-tide = "0.16"
+tide = { version = "0.16", default-features = false }
 tokio = { version = "1.9.0", features = ["rt", "macros", "rt-multi-thread"] }
-axum = "0.1.3"
+axum = { version = "0.1.3", default-features = false }
 
 [dependencies.async-std]
 version = "1.9.0"
