--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,9 @@ jobs:
     - name: Install Rust
       uses: actions-rs/toolchain@v1
       with:
-        toolchain: nightly-2021-09-16
+        toolchain: nightly
         profile: minimal
         override: true
 
     - name: Doctest
-      run: cd doctest && cargo test
+      run: cd doctest && CARGO_HTTP_MULTIPLEXING=false cargo test
