Change examples build to `cargo check`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
       run: cd docs && make -j$(nproc)
 
   examples:
-    name: Examples
+    name: Examples (check-only)
     runs-on: ubuntu-latest
 
     steps:
@@ -75,7 +75,7 @@ jobs:
 
     - name: Doctest
       # https://github.com/rust-lang/cargo/issues/9919
-      run: cd doctest && CARGO_HTTP_MULTIPLEXING=false cargo test
+      run: cd doctest && CARGO_HTTP_MULTIPLEXING=false cargo check
 
   rustfmt:
     name: Rustfmt
