Revert name change

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
       run: cd docs && make -j$(nproc)
 
   examples:
-    name: Examples (check-only)
+    name: Examples
     runs-on: ubuntu-latest
 
     steps:
