Revert Cargo bug workaround for publish-docs.yml

--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -33,10 +33,7 @@ jobs:
         override: true
 
     - name: Build documentation
-      run: |
-        # https://github.com/rust-lang/cargo/issues/9919
-        export CARGO_HTTP_MULTIPLEXING=false
-        cd docs && make -j$(nproc)
+      run: cd docs && make -j$(nproc)
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
