--- a/doctest/Cargo.toml
+++ b/doctest/Cargo.toml
@@ -10,7 +10,7 @@ ammonia = "3"
 iron = "0.6"
 maud = { path = "../maud", features = ["actix-web", "iron", "rocket", "tide", "axum"] }
 pulldown-cmark = "0.8"
-rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "3045e0ac63fd5c4e2e543649c6871d896cbf9c0b" }
+rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "v0.5.0-rc.1" }
 rouille = "3"
 tide = "0.16"
 tokio = { version = "1.9.0", features = ["rt", "macros", "rt-multi-thread"] }
