Run Clippy on docs builder

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,9 +53,13 @@ jobs:
         toolchain: nightly
         profile: minimal
         override: true
+        components: clippy
 
     - name: Build documentation
       run: cd docs && make -j$(nproc)
+
+    - name: Check Clippy
+      run: cd docs && cargo clippy --all-targets -- -D warnings
 
   examples:
     name: Examples
