--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -19,6 +19,7 @@ actix-web = ["actix-web-dep", "futures-util"]
 
 [dependencies]
 maud_macros = { version = "0.23.0", path = "../maud_macros" }
+itoa = { version = "0.4.8", default-features = false, features = ["i128"] }
 rocket = { version = ">= 0.3, < 0.5", optional = true }
 futures-util = { version = "0.3.0", optional = true, default-features = false }
 actix-web-dep = { package = "actix-web", version = ">= 2, < 4", optional = true, default-features = false }
