--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -14,9 +14,8 @@ edition = "2021"
 [features]
 default = []
 axum = ["axum-core", "http"]
-
-# Web framework integrations
 actix-web = ["actix-web-dep", "futures-util"]
+sanitize = ["ammonia"]
 
 [dependencies]
 maud_macros = { version = "0.23.0", path = "../maud_macros" }
@@ -27,6 +26,7 @@ actix-web-dep = { package = "actix-web", version = ">= 2, < 4", optional = true,
 tide = { version = "0.16.0", optional = true, default-features = false }
 axum-core = { version = "0.1", optional = true }
 http = { version = "0.2", optional = true }
+ammonia = { version = "3.1.2", optional = true }
 
 [dev-dependencies]
 trybuild = { version = "1.0.33", features = ["diff"] }
