Run doctests again
Per rust-lang/cargo#6424, `cargo check` doesn't actually run the
doctests. So we need `cargo test` for this to work.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
         override: true
 
     - name: Doctest
-      run: cd doctest && cargo check
+      run: cd doctest && cargo test
 
   rustfmt:
     name: Rustfmt
