--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2021"
 
 [features]
 default = []
+axum = ["axum-core", "http"]
 
 # Web framework integrations
 actix-web = ["actix-web-dep", "futures-util"]
@@ -24,7 +25,8 @@ rocket = { version = ">= 0.3, < 0.5", optional = true }
 futures-util = { version = "0.3.0", optional = true, default-features = false }
 actix-web-dep = { package = "actix-web", version = ">= 2, < 4", optional = true, default-features = false }
 tide = { version = "0.16.0", optional = true, default-features = false }
-axum = { version = "0.2", optional = true }
+axum-core = { version = "0.1", optional = true }
+http = { version = "0.2", optional = true }
 
 [dev-dependencies]
 trybuild = { version = "1.0.33", features = ["diff"] }
