--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -9,7 +9,7 @@ homepage = "https://maud.lambda.xyz/"
 repository = "https://github.com/lambda-fairy/maud"
 description = "Compile-time HTML templates."
 categories = ["template-engine"]
-edition = "2021"
+edition = "2018"
 
 [features]
 default = []
@@ -30,6 +30,7 @@ http = { version = "0.2", optional = true }
 
 [dev-dependencies]
 trybuild = { version = "1.0.33", features = ["diff"] }
+rustversion = "1"
 
 [package.metadata.docs.rs]
 all-features = true
