--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -13,17 +13,17 @@ edition = "2021"
 
 [features]
 default = []
-axum = ["axum-core", "http"]
 
 # Web framework integrations
 actix-web = ["actix-web-dep", "futures-util"]
+axum = ["axum-core", "http"]
 
 [dependencies]
 maud_macros = { version = "0.23.0", path = "../maud_macros" }
 itoa = { version = "0.4.8", default-features = false, features = ["i128"] }
 rocket = { version = ">= 0.3, < 0.5", optional = true }
 futures-util = { version = "0.3.0", optional = true, default-features = false }
-actix-web-dep = { package = "actix-web", version = ">= 2, < 4", optional = true, default-features = false }
+actix-web-dep = { package = "actix-web", version = "4", optional = true, default-features = false }
 tide = { version = "0.16.0", optional = true, default-features = false }
 axum-core = { version = "0.1", optional = true }
 http = { version = "0.2", optional = true }
