--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -26,6 +26,7 @@ futures-util = { version = "0.3.0", optional = true, default-features = false }
 actix-web-dep = { package = "actix-web", version = "4", optional = true, default-features = false }
 tide = { version = "0.16.0", optional = true, default-features = false }
 axum-core = { version = "0.1", optional = true }
+poem = { version = "~1", optional = true }
 http = { version = "0.2", optional = true }
 
 [dev-dependencies]
