Document that the `doctest` crate might need updating
Also rename the "Examples" build to "Doctest" to clarify what it does.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,8 +61,8 @@ jobs:
     - name: Check Clippy
       run: cd docs && cargo clippy --all-targets -- -D warnings
 
-  examples:
-    name: Examples
+  doctest:
+    name: Doctest
     runs-on: ubuntu-latest
 
     steps:
