--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -20,7 +20,7 @@ axum = ["axum-core", "http"]
 
 [dependencies]
 maud_macros = { version = "0.24.0", path = "../maud_macros" }
-itoa = { version = "0.4.8", default-features = false, features = ["i128"] }
+itoa = "1"
 rocket = { version = ">= 0.3, < 0.5", optional = true }
 futures-util = { version = "0.3.0", optional = true, default-features = false }
 actix-web-dep = { package = "actix-web", version = "4", optional = true, default-features = false }
