--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -12,7 +12,8 @@ categories = ["template-engine"]
 edition = "2021"
 
 [features]
-default = []
+default = ["hotreload"]
+hotreload = ["maud_macros_impl"]
 
 # Web framework integrations
 actix-web = ["actix-web-dep", "futures-util"]
@@ -20,6 +21,7 @@ axum = ["axum-core", "http"]
 
 [dependencies]
 maud_macros = { version = "0.25.0", path = "../maud_macros" }
+maud_macros_impl = { version = "0.25.0", path = "../maud_macros_impl", optional = true }
 itoa = "1"
 rocket = { version = ">= 0.3, < 0.5", optional = true }
 futures-util = { version = "0.3.0", optional = true, default-features = false }
