--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -29,6 +29,7 @@ actix-web-dep = { package = "actix-web", version = "4", optional = true, default
 tide = { version = "0.16.0", optional = true, default-features = false }
 axum-core = { version = "0.3", optional = true }
 http = { version = "0.2", optional = true }
+leon = "2.0.1"
 
 [dev-dependencies]
 trybuild = { version = "1.0.33", features = ["diff"] }
