--- a/maud_macros/Cargo.toml
+++ b/maud_macros/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2021"
 syn = "2"
 quote = "1.0.7"
 proc-macro2 = "1.0.23"
-proc-macro-error = "1.0.0"
+proc-macro-error = { version = "1.0.0", default-features = false }
 
 [lib]
 name = "maud_macros"
