Upgrade to `syn` 2.0.0 (#400)
* Upgrade syn

* Disable proc-macro-error syn 1.0.0 dependency

* Update docs lockfile

--- a/maud_macros/Cargo.toml
+++ b/maud_macros/Cargo.toml
@@ -11,10 +11,10 @@ description = "Compile-time HTML templates."
 edition = "2021"
 
 [dependencies]
-syn = "1.0.8"
+syn = "2"
 quote = "1.0.7"
 proc-macro2 = "1.0.23"
-proc-macro-error = "1.0.0"
+proc-macro-error = { version = "1.0.0", default-features = false }
 
 [lib]
 name = "maud_macros"
