--- a/doctest/Cargo.toml
+++ b/doctest/Cargo.toml
@@ -14,6 +14,7 @@ rouille = "3"
 tide = "0.16"
 tokio = { version = "1.9.0", features = ["rt", "macros", "rt-multi-thread"] }
 axum = "0.6"
+warp = "0.3.6"
 
 [dependencies.async-std]
 version = "1.9.0"
