--- a/doctest/Cargo.toml
+++ b/doctest/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 [dependencies]
 actix-web = { version = "4.0.0-rc.2", default-features = false, features = ["macros"] }
 ammonia = "3"
-maud = { path = "../maud", features = ["actix-web", "rocket", "tide", "axum"] }
+maud = { path = "../maud", features = ["actix-web", "rocket", "tide", "axum", "warp"] }
 pulldown-cmark = "0.8"
 rocket = "0.4"
 rouille = "3"
