feat: modernize parser

--- a/maud_macros/Cargo.toml
+++ b/maud_macros/Cargo.toml
@@ -12,10 +12,10 @@ repository.workspace = true
 edition.workspace = true
 
 [dependencies]
-syn = "2"
+syn = { version = "2", features = ["extra-traits", "full"] }
 quote = "1.0.7"
 proc-macro2 = "1.0.23"
-proc-macro-error = { version = "1.0.0", default-features = false }
+proc-macro2-diagnostics = { version = "0.10", default-features = false }
 
 [lib]
 name = "maud_macros"
