--- a/maud_macros/Cargo.toml
+++ b/maud_macros/Cargo.toml
@@ -2,13 +2,14 @@
 name = "maud_macros"
 # When releasing a new version, please update html_root_url in src/lib.rs
 version = "0.26.0"
-authors = ["Chris Wong <lambda.fairy@gmail.com>"]
-license = "MIT/Apache-2.0"
 documentation = "https://docs.rs/maud_macros/"
-homepage = "https://maud.lambda.xyz/"
-repository = "https://github.com/lambda-fairy/maud"
-description = "Compile-time HTML templates."
-edition = "2021"
+description = "Internal crate. Please use 'maud' instead."
+
+authors.workspace = true
+license.workspace = true
+homepage.workspace = true
+repository.workspace = true
+edition.workspace = true
 
 [dependencies]
 syn = "2"
