--- a/doctest/Cargo.toml
+++ b/doctest/Cargo.toml
@@ -7,10 +7,11 @@ edition = "2021"
 [dependencies]
 actix-web = { version = "4.0.0-rc.2", default-features = false, features = ["macros"] }
 ammonia = "3"
-maud = { path = "../maud", features = ["actix-web", "rocket", "tide", "axum", "warp"] }
+maud = { path = "../maud", features = ["actix-web", "rocket", "tide", "axum", "warp", "submillisecond"] }
 pulldown-cmark = "0.8"
 rocket = "0.5"
 rouille = "3"
+submillisecond = "0.4.1"
 tide = "0.16"
 tokio = { version = "1.9.0", features = ["rt", "macros", "rt-multi-thread"] }
 axum = "0.7"
