Switch to proc_macro_error2
Fixes #441.

proc_macro_error is marked as unmaintained in rustsec:
https://rustsec.org/advisories/RUSTSEC-2024-0370.html

Because proc_macro_error2 removed automatic nightly detection, the error
messages changed slightly.

--- a/maud_macros/Cargo.toml
+++ b/maud_macros/Cargo.toml
@@ -15,7 +15,7 @@ edition.workspace = true
 syn = "2"
 quote = "1.0.7"
 proc-macro2 = "1.0.23"
-proc-macro-error = { version = "1.0.0", default-features = false }
+proc-macro-error2 = { version = "2.0.1", default-features = false }
 
 [lib]
 name = "maud_macros"
