--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -14,7 +14,7 @@ edition.workspace = true
 
 [features]
 default = []
-hotreload = ["maud_macros_impl", "leon"]
+hotreload = ["maud_macros_impl/hotreload", "maud_macros/hotreload"]
 
 # Web framework integrations
 actix-web = ["actix-web-dep", "futures-util"]
@@ -28,7 +28,6 @@ rocket = { version = "0.5", optional = true }
 futures-util = { version = "0.3.0", optional = true, default-features = false }
 actix-web-dep = { package = "actix-web", version = "4", optional = true, default-features = false }
 tide = { version = "0.16.0", optional = true, default-features = false }
-leon = { version = "2.0.1", optional = true }
 axum-core = { version = "0.4", optional = true }
 submillisecond = { version = "0.4.1", optional = true }
 http = { version = "1", optional = true }
