--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -14,6 +14,7 @@ edition.workspace = true
 
 [features]
 default = []
+alloc = []
 
 # Web framework integrations
 actix-web = ["actix-web-dep", "futures-util"]
