--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -18,6 +18,7 @@ default = []
 # Web framework integrations
 actix-web = ["actix-web-dep", "futures-util"]
 axum = ["axum-core", "http"]
+poem-3 = ["poem"]
 
 [dependencies]
 maud_macros = { version = "0.26.0", path = "../maud_macros" }
@@ -30,6 +31,7 @@ axum-core = { version = "0.5", optional = true }
 submillisecond = { version = "0.4.1", optional = true }
 http = { version = "1", optional = true }
 warp = { version = "0.3.6", optional = true }
+poem = { version = "3", optional = true }
 
 [dev-dependencies]
 trybuild = { version = "1.0.33", features = ["diff"] }
