--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -30,6 +30,7 @@ axum-core = { version = "0.5", optional = true }
 submillisecond = { version = "0.4.1", optional = true }
 http = { version = "1", optional = true }
 warp = { version = "0.3.6", optional = true }
+poem = { version = "3", optional = true }
 
 [dev-dependencies]
 trybuild = { version = "1.0.33", features = ["diff"] }
