--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -19,24 +19,20 @@ jobs:
     steps:
 
     - name: Check out repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         ref: '${{ github.event.inputs.ref }}'
         # Documentation build uses `git describe` which requires history
         fetch-depth: 0
 
     - name: Install Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: nightly
-        profile: minimal
-        override: true
+      uses: dtolnay/rust-toolchain@nightly
 
     - name: Build documentation
       run: cd docs && make -j$(nproc)
 
     - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: docs/site
