--- a/maud_macros/Cargo.toml
+++ b/maud_macros/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 homepage.workspace = true
 repository.workspace = true
 edition.workspace = true
+include.workspace = true
 
 [dependencies]
 syn = { version = "2", features = ["extra-traits", "full"] }
