--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -22,6 +22,9 @@ actix-web = ["actix-web-dep", "futures-util"]
 axum = ["axum-core", "http"]
 salvo = ["salvo_core", "http"]
 
+# Optional extras.
+json = ["serde", "serde_json"]
+
 [dependencies]
 maud_macros = { version = "0.27.0", path = "../maud_macros" }
 itoa = "1"
@@ -35,8 +38,11 @@ http = { version = "1", optional = true }
 warp = { version = "0.3.6", optional = true }
 poem = { version = "3", optional = true }
 salvo_core = { version = "0.78.0", optional = true }
+serde = { version = "1", optional = true }
+serde_json = { version = "1", optional = true }
 
 [dev-dependencies]
+serde = { version = "1", features = ["derive"] }
 trybuild = { version = "1.0.33", features = ["diff"] }
 
 [package.metadata.docs.rs]
