--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -17,6 +17,9 @@ include.workspace = true
 [features]
 default = []
 
+# Streaming documents
+streaming = ["dep:futures", "dep:async-stream", "maud_macros/streaming"]
+
 # Web framework integrations
 actix-web = ["actix-web-dep", "futures-util"]
 axum = ["axum-core", "http"]
@@ -35,6 +38,8 @@ http = { version = "1", optional = true }
 warp = { version = "0.4", optional = true }
 poem = { version = "3", optional = true }
 salvo_core = { version = "0.78.0", optional = true }
+futures = { version = "0.3.31", default-features = false, optional = true }
+async-stream = { version = "0.3.6", default-features = false, optional = true }
 
 [dev-dependencies]
 trybuild = { version = "1.0.33", features = ["diff"] }
