--- a/maud_macros/Cargo.toml
+++ b/maud_macros/Cargo.toml
@@ -12,6 +12,11 @@ repository.workspace = true
 edition.workspace = true
 include.workspace = true
 
+[features]
+
+# Streaming documents
+streaming = []
+
 [dependencies]
 syn = { version = "2", features = ["extra-traits", "full"] }
 quote = "1.0.7"
